before switching to cleveref

--- a/abstract.tex
+++ b/abstract.tex
@@ -2,10 +2,9 @@
 Focal adhesion kinase (FAK) is a tyrosine kinase associated to focal adhesions with a downstream effect on cell migration and other important biological functions. The phospholipid \pip{} is known as a moderator for FAK activation. \pip{} induces clustering of FAK molecules, but the impact of clustering on the protein conformation of FAK is still not understood. Since an overexpression of FAK is associated with invasive tumours, insights into the clustering process could give rise to new cancer treatments.\\
 In previous studies, coarse-grained MD simulations led to an unnatural falling of FAK on the membrane. During the course of this project, we were able to rule out an underestimation of the binding strength of FAK to \pip{} as the cause using umbrella simulations. Because the exact reason for FAK falling could not be identified, we introduced a stabilising force acting on the FERM domain of FAK. With this approach, we obtain reasonable results for FAK bound to \pip{} as well as for multiple FAK interactions. Our observations indicate that FAK arranges into chain-like clusters. However, we do not observe FAK activation upon clustering within the time-scale of our simulations.
 \newpage
-\leavevmode\thispagestyle{empty}\newpage
+\leavevmode\thispagestyle{plain}\newpage
 \chapter*{Zusammenfassung}
 \begin{german}
 	FAK ist eine Tyrosinkinase, die vermehrt in Fokalen Adhäsionen zu finden ist und regulierende Einflüsse auf Zellmigration und andere biologische Funktionen hat. Als Moderator der Aktivierung von FAK tritt das Phospholipid \pip{} auf. \pip{} induziert die Bildung von FAK-Clustern. Allerdings ist der Einfluss der Clusterbildung auf die Konformation von FAK noch nicht vollständig verstanden. Da in invasiven Tumoren häufig eine überdurchschnittlich hohe Konzentration von FAK zu finden ist, könnte ein tieferes Verständnis der Clusterbildung ein wichtiger Schritt auf dem Weg hin zu neuartigen Krebstherapien sein.\\
 	In vorangegangen Untersuchungen zeigte sich in grobaufgelösten MD Simulationen ein unnatürliches Umfallen von FAK auf die Seitenfläche. Im Verlauf dieses Projektes konnten wir mit Hilfe von Umbrella Sampling die Unterschätzung der Bindungsenergie von FAK und \pip{} als Ursache ausschließen. Da der tatsächliche Grund des Umfallens nicht identifiziert werden konnte, führten wir eine stabilisierende Kraft auf die FERM Domäne von FAK ein. Mit diesem Ansatz können wir plausible Ergebnisse für an \pip{} gebundene FAK-Moleküle und Interaktionen zwischen mehreren FAK-Molekülen beobachten. Unsere Beobachtungen deuten darauf hin, dass FAK-Moleküle zu einer kettenartigen Strukturbildung tendieren. Allerdings kann auf der Zeitskala der Simulationen in derartigen Strukturen keine signifikante Aktivierung von FAK beobachtet werden.
 \end{german}
-\newpage
