--- a/document.tex
+++ b/document.tex
@@ -1,9 +1,3 @@
-% TODOS!!!
-%	-> write Section instead of section
-%	-> check (see ...)
-%  -> look for all refs to motivation and change
-% -> headings
-%
 % kompiliert mit XeLaTeX
 \documentclass[
 11pt, % font size
@@ -25,7 +19,7 @@ oneside, % oneside / twoside
 \date{August 21, 2017}
 
 % Mathe
-\usepackage{amsmath, amssymb, booktabs, hyperref, subcaption, siunitx, tocloft}
+\usepackage{amsmath, amssymb, booktabs, hyperref, subcaption, siunitx, tocloft, cleveref}
 \setlength\cftaftertoctitleskip{0pt}
 \bibliography{Paper}
 
@@ -50,7 +44,7 @@ oneside, % oneside / twoside
 \newcommand{\nicecaption}[2]{\caption[#1]{\small{\textbf{#1}\\#2}}}
 
 
-%\includeonly{ba_titlepage, abstract, introduction}
+\includeonly{introduction}
 
 \begin{document}
 \include{ba_titlepage}
@@ -58,7 +52,8 @@ oneside, % oneside / twoside
 % abstract english and german
 \pagenumbering{roman}
 \include{abstract}
-\leavevmode\thispagestyle{empty}\newpage
+\newpage
+\leavevmode\thispagestyle{plain}\newpage
 \tableofcontents
 \newpage
 \leavevmode\thispagestyle{empty}\newpage
@@ -67,19 +62,27 @@ oneside, % oneside / twoside
 % chapter introduction
 \pagenumbering{arabic}
 \include{introduction}
+\newpage
+\leavevmode\thispagestyle{plain}\newpage
 %
 %	
 %	
 % chapter introduction
 \include{motivation}
+\newpage
+\leavevmode\thispagestyle{plain}\newpage
 %
 %
 % chapter methods
 \include{methods}
+\newpage
+\leavevmode\thispagestyle{plain}\newpage
 %
 %
 % chapter setup
 \include{setup}
+\newpage
+\leavevmode\thispagestyle{plain}\newpage
 %
 %
 % chapter results
@@ -94,11 +97,16 @@ oneside, % oneside / twoside
 \addcontentsline{toc}{chapter}{Acknowledgements}
 First, I would like to thank Prof. Dr. Frauke Gräter for the opportunity to work in her research group and Prof. Dr. Ulrich Schwarz for the supervision of my bachelor project. Furthermore, I would like to thank the group members for their support, especially Dr. Csaba Daday who is leading the research on FAK in the group.\\
 Finally, I want to appreciate the feedback offered by my fellow students and friends as well as the support which I got from my family and my girlfriend, Marie.
+\newpage
+\leavevmode\thispagestyle{plain}\newpage
 %
 \newpage
 \listoffigures
+\newpage
+\leavevmode\thispagestyle{plain}\newpage
 \printbibliography[title=References]{}
 \newpage
+\leavevmode\thispagestyle{plain}\newpage
 \include{selbstaendigkeit}
 % bibliography
 \end{document}
