--- a/introduction.tex
+++ b/introduction.tex
@@ -33,6 +33,6 @@ The binding sites for \pip{} on the side of the kinase were identified via compu
 \label{intro:clustering}
 Experimental findings suggest that self-association of FAK, such as dimerization or clustering, can trigger autophosphorylation of \acid{Y}{397} \autocites{transAuto}{dimersVsClusters}.\\
 \\
-The FERM domain induces a dimerization of FAK by interacting with the FERM domain of a neighbouring FAK molecule. The interaction emerges around \acid{W}{266} in the connected FERM domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain, respectively. \pip{} is not required for the dimerization of the FERM domains. However, an enriched FAK concentration is needed to observe FAK dimers in cells, which is the case at FAs. It is still unclear how the dimer can be stabilised at membranes, where the basic patch is also required for ligand binding \autocite{fakdimers}.\\
+The FERM domain induces a dimerization of FAK by interacting with the FERM domain of a neighbouring FAK molecule. The interaction emerges around \acid{W}{266} in the connected FERM domains and is stabilised by an interaction of the FAT domain with the basic patch of the other FERM domain, respectively. \pip{} is not required for the dimerization of the FERM domains. However, an enriched FAK concentration is needed to observe FAK dimers in cells, which is the case at FAs. It is still unclear how the dimer could be stabilised at membranes, where the basic patch is also required for ligand binding \autocite{fakdimers}.\\
 \\
 \pip{} does not only induce conformational changes, but also clustering of several FAK molecules on the membrane \textit{in vitro} \autocite{pap001}. In contrast to dimers, clusters of FAK molecules can trigger additional biochemical stimuli \autocite{dimersVsClusters} and may play an important role in the scaffolding function of FAK for FAs \autocite{pap001}.
