--- a/methods.tex
+++ b/methods.tex
@@ -4,6 +4,6 @@ Before we can present the used setups and the obtained results, the most importa
 \input{methods/md}
 \section{Free energy calculations}
 \input{methods/fec}
-\section{Contact Analysis}
+\section{Contact analysis}
 \label{methods:contactana}
 \input{methods/contactanalysis}
