--- a/methods/contactanalysis.tex
+++ b/methods/contactanalysis.tex
@@ -20,7 +20,7 @@ For an appropriate description of intermolecular interactions between FAK molecu
 	\item the FERM domain is interacting with the FERM domain of the neighbouring protein and the kinase is interacting with the kinase of the neighbouring protein
 	\item the FERM domain is interacting with the kinase of the neighbouring protein and the kinase is interacting with the FERM domain of the neighbouring protein
 \end{enumerate}
-It is important to see that the probability of the different types is initially biased, as the following example demonstrates. Assuming one FAK molecule with the FERM domain pointing to the right, a type 1 neighbour can only form if the second molecule docks via its FERM domain from the right. In contrast, a type 3 neighbour can form from both sides with the appropriate orientations. Therefore, even if there would be no energetic preference between the interaction types, type 3 neighbours would be preferred. On the other hand, interactions of type 4, 5, 6 and 7 would occur more rarely, because the range of appropriate binding surfaces is much smaller compared to type 1, 2 and 3.
+It is important to see that the probability of the different types is initially biased, as the following example demonstrates. Assuming one FAK molecule with the FERM domain pointing to the right, a type 1 neighbour can only form if the second molecule docks via its FERM domain from the right. In contrast, a type 3 neighbour can still form from both sides with the appropriate orientations. Therefore, even if there would be no energetic preference between the interaction types, type 3 neighbours would be preferred. On the other hand, interactions of type 4, 5, 6 and 7 would occur more rarely, because the range of appropriate binding surfaces is much smaller compared to type 1, 2 and 3.
 %
 %
 %
