--- a/motivation.tex
+++ b/motivation.tex
@@ -1,6 +1,6 @@
 \chapter{Motivation}
 As described in \autoref{intro:clustering}, intermolecular interactions of FAK molecules can effect their activation. The understanding of these interactions is of interest because they might play an important role in tumour cells in which FAK is often overexpressed. In addition, since FAK contributes to several signalling pathways and has a downstream effect on important cell functions, new insights into the activation process of FAK can be valuable for further studies as well.\\
-The aim of this project is to get first atomistic insights into the clustering process of FAK molecules on a \pip{}-containing membrane. To this end, we let multiple FAK molecules aggregate on a membrane and analyse their clustering and conformational changes. With these observations, more specific investigations on interactions of multiple FAK molecules become accessible.\\
+The aim of this project is to get first atomistic insights into the clustering process of FAK molecules on a \pip{}-containing membrane. To this end, we let multiple FAK molecules aggregate on a membrane and analyse the clustering process and conformational changes in the molecules. With these observations, more specific investigations on interactions of multiple FAK molecules might become accessible.\\
 \\
 In this project, we used coarse-grained MD simulations with the \martini{} force field. \martini{} lacks chemical details, but it is a necessary simplification since systems with several FAK molecules involve a large number of particles and clustering processes have a large time scale.\\
 Previous work in the group revealed problems in the use of \martini{} for simulations of FAK on a \pip{}-containing membrane, which are briefly discussed in \autoref{stabilising}. It was suggested that they occur due to an underestimation of the binding of the basic patch to \pip{} in \martini{}. Therefore, the examination of this binding was part of the project as well.
