--- a/methods/contactanalysis.tex
+++ b/methods/contactanalysis.tex
@@ -9,7 +9,7 @@ For the calculation of SASA values \gromacs{} sasa tool was used. The v.d.W radi
 \\
 For an appropriate description of intermolecular interactions between FAK molecules, we defined the following terms:\\
 \textbf{Interaction} Proteins or part of proteins interact if their minimal distance is smaller than a cut-off distance (here $1.5\,\si{\nano\metre}$).\\
-\textbf{Neighbour} Two proteins are neighbours if they are interacting with each other. One protein can have several neighbours. For a more detailed characterisation we defined the following neighbouring types (see \autoref{methods:inttypes}):
+\textbf{Neighbour} Two proteins are neighbours if they are interacting with each other. One protein can have several neighbours. For a more detailed characterisation we defined the following neighbouring types (see \Cref{methods:inttypes}):
 \begin{enumerate}[label={type \theenumi:}, leftmargin=*]
 	\setcounter{enumi}{0}
 	\item only the FERM domain interacts with only the FERM domain of the neighbouring protein
