--- a/methods/fec.tex
+++ b/methods/fec.tex
@@ -32,7 +32,7 @@ Usually, the exact value of the free energy is unknown, but the main interest li
 \begin{equation}
 \Delta A = A_2 - A_1 = - \beta \ln\left(Q_2\right) + \beta \ln\left(Q_1\right) = -\beta \ln\left(\frac{Q2}{Q1}\right) = -\beta \ln \left(\frac{Z_2}{Z_1}\right),
 \end{equation}
-and the normalisation constant $C_0$ in \autoref{eq:partfunc} therefore cancels out.
+and the normalisation constant $C_0$ in \Cref{eq:partfunc} therefore cancels out.
 \subsubsection{Free energy in MD and Umbrella Sampling}
 The free energy of a system as a function of a parameter $\xi$ is given as
 \begin{equation}
